--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
         // ============================================
         // SUPABASE CONFIGURATION - UPDATE THESE VALUES!
         // ============================================
-        const SUPABASE_URL = 'https://your-project-ref.supabase.co';  // REPLACE with your Supabase URL
-        const SUPABASE_KEY = 'your-anon-key';                         // REPLACE with your Supabase anon key
+        const SUPABASE_URL = 'https://aahrwtlmemaqacubievh.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFhaHJ3dGxtZW1hcWFjdWJpZXZoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA3ODg5MTgsImV4cCI6MjA4NjM2NDkxOH0.sCQwcgEtEh4VMcIswpF2xA7bHfnc2OiB911YAwZuzvc';                         
         
         // Global variables
         let holeData = [];
