--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
                         holes_actual,
                         actual_volume,
                         planned_volume,
-                        location
+                        geom
                     `)
                     .order('blast_date', { ascending: false })
                     .order('blast_time', { ascending: false });
